<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
    <string name="carsuper_exit">再按一次退出程序</string>
    <string name="app_name">RBJ掌上检核</string>
    <string name="download_apk">正在下载RBJ掌上检核安装包</string>
    <string name="recyclerview_item_foot">正在加载&#8230;</string>
    <string name="home">首页</string>
    <string name="upload">上传</string>
    <string name="audit">审核</string>
    <string name="center">个人中心</string>
    <string name="title">标题</string>
    <string name="title_dialog">Tips</string>
    <string name="message_permission_tittle">获取权限失败</string>
    <string name="message_permission_content">我们需要当前权限</string>
    <string name="message_permission_rationale">授予以下权限以继续该程序:\n\n%1$s</string>
    <string name="message_permission_always_failed">请在设置里给我们一下权限:\n\n%1$s</string>
    <string name="message_setting_comeback">用户从设置页面返回。</string>
    <string name="account_id">账户</string>
    <string name="pass_word">密码</string>
    <string name="start_checking">开始检核</string>
    <string name="history_list">历史项目</string>
    <string name="checking_template">请选择项目模板</string>
    <string name="Province">省&#32;&#32;&#32;市</string>
    <string name="checking_dealer">请选择经销商</string>
    <string name="dealer_name_1">经销商名称</string>
    <string name="select_dealer">点击选择经销商</string>
    <string name="select_Province">点击选择省市</string>
    <string name="dealer_code_1">经销商代码</string>
    <string name="start_checking_1">开始检核</string>
    <string name="string_1">数据%1$d条,附件%2$d个未上传</string>
    <string name="string_2">暂无数据</string>
    <string name="string_3">未完成(%1$d/%2$d)</string>
    <string name="dialog_tittle_1">提示</string>
    <string name="dialog_content_1">您是否去打卡?</string>
    <string name="dialog_negativeText_1">去打卡</string>
    <string name="dialog_positiveText_1">已经打卡</string>
    <string name="project_detail_tittle">项目详情</string>
    <string name="project_detail_manager">项目经理</string>
    <string name="project_detail_auditor">检核员</string>
    <string name="project_detail_dealer_name_2">经销商:</string>
    <string name="project_detail_dealer_code_2">经销商代码:</string>
    <string name="project_detail_authorization_level">授权级别:</string>
    <string name="project_detail_address_1">地址:</string>
    <string name="project_detail_upload_times">上传时间节点:</string>
    <string name="project_detail_attendance_schedule">考勤班次:</string>
    <string name="project_detail_access_state">检核进度:</string>
    <string name="project_detail_upload_state">上传状态:</string>
    <string name="project_detail_entry_specification">项目说明</string>
    <string name="project_detail_attendance_card">考勤打卡</string>
    <string name="project_detail_start_checking_2">开始检核</string>
    <string name="project_detail_browse_attachment">浏览附件</string>
    <string name="project_list_all_1">全部</string>
    <string name="project_list_uncomplete_1">未完成</string>
    <string name="project_list_complete_1">已完成</string>
    <string name="project_list_date_size">共有%1$d题, %2$d个附件未上传</string>
    <string name="attence_tittle_1">考勤</string>
    <string name="attence_attence_1">考勤</string>
    <string name="attence_history_1">接触历史</string>
    <string name="attendance_limits">已进入考勤范围</string>
    <string name="no_attendance">不在考勤范围</string>
    <string name="attendance_dialog_content">不在考勤范围内</string>
    <string name="attendance_entrance_time">进店时间</string>
    <string name="attendance_departure_time">离店时间</string>
    <string name="attendance_start_push_card">开始打卡</string>
    <string name="attendance_string_1">不在考勤范围</string>
    <string name="attendance_relocation">去重新定位</string>
    <string name="attendance_end_push_card">结束打卡</string>
    <string name="attendance_push_card_time">打卡时间:</string>
    <string name="attendance_sky_drop_notes">添加备注</string>
    <string name="attendance_update_punck_card">更新打卡</string>
    <string name="attendance_access_progress">访问进度:</string>
    <string name="attendance_notes">备注:</string>
    <string name="attendance_morrow">次日</string>
    <string name="attendance_the_same_day">当日</string>
    <string name="attendance_appointment_date">预约日期</string>
    <string name="project_annex_tittle_1">项目附件</string>
    <string name="project_annex_all">全部</string>
    <string name="project_annex_imgs">图片</string>
    <string name="project_annex_audios">录音</string>
    <string name="project_annex_pic_count">共有%1$d张</string>
    <string name="project_annex_play_audio">播放</string>
    <string name="project_annex_count">数量</string>
    <string name="start_activity_tittle">第%1$d项</string>
    <string name="start_activity_checklist">检核项</string>
    <string name="answer_page_remark">点击编辑</string>
    <string name="answer_page_spread">展开</string>
    <string name="answer_page_close">关闭</string>
    <string name="answer_page_cancel">取消</string>
    <string name="answer_page_check_score">检核得分:</string>
    <string name="answer_page_score">分</string>
    <string name="answer_page_explain">说明:</string>
    <string name="answer_page_evidence">取证</string>
    <string name="answer_page_take_photo">拍照</string>
    <string name="answer_page_start_recording">开始录音</string>
    <string name="answer_page_fill_in_notes">填写备注</string>
    <string name="answer_page_recording">录音</string>
    <string name="answer_page_audio_file">录音文件:</string>
    <string name="answer_page_play">播放</string>
    <string name="answer_page_picture">图片</string>
    <string name="answer_page_last_subject">上一项</string>
    <string name="answer_page_next_subject">下一项</string>
    <string name="answer_page_upload_this_topic">上传本项</string>
    <string name="Notification_name">通知</string>
    <string name="Notification_description">消息推送</string>
    <string name="re_start_spread">展开</string>
    <string name="re_start_close">关闭</string>
    <string name="re_start_cancel">取消</string>
    <string name="review_fragment_not_null">不能为空</string>
    <string name="review_fragment_tittle">第%1$d项</string>
    <string name="review_fragment_1">已通过</string>
    <string name="review_fragment_2">未通过</string>
    <string name="review_fragment_3">共有%1$d题打回</string>
    <string name="review_fragment_4">详情</string>
    <string name="ReviewSubjectList_not_pass">审核未通过</string>
    <string name="ReviewSubjectList_pass">审核通过</string>
    <string name="ReviewSubjectList_reviewer_comment">评审意见:</string>
    <string name="ReviewSubjectList_reviewer_pass_1">初审通过</string>
    <string name="ReviewSubjectList_reviewer_pass_2">复审通过</string>
    <string name="ReviewSubjectList_reviewer_pass_3">终审通过</string>
    <string name="ReviewSubjectList_reviewer_not_pass_1">初审未通过</string>
    <string name="ReviewSubjectList_reviewer_not_pass_2">复审未通过</string>
    <string name="ReviewSubjectList_reviewer_not_pass_3">终审未通过</string>
    <string name="umeng_fragment_not_pass">[审核未通过]</string>
    <string name="umeng_fragment_not_pass_detail">你有项目审核未通过，经销商代码为:</string>
    <string name="umeng_fragment_upload">[任务上传]</string>
    <string name="umeng_fragment_upload_detail">你有项目未上传，经销商代码为:</string>
    <string name="umeng_fragment_overdue_reminder">[超期提醒]</string>
    <string name="umeng_fragment_overdue_reminder_detail">你有项目已超期，经销商代码为:</string>
    <string name="upload_fragment_date_size">共有%1$d题, %2$d数据未上传</string>
    <string name="change_password_fragment_change_password">修改密码</string>
    <string name="change_password_fragment_old_password">原密码</string>
    <string name="change_password_fragment_old_password_1">输入原密码</string>
    <string name="change_password_fragment_new_password_1">新密码</string>
    <string name="change_password_fragment_new_password_2">输入新密码</string>
    <string name="change_password_fragment_new_password_3">再次输入新密码</string>
    <string name="change_password_fragment_change_complete">完成</string>
    <string name="change_password_fragment_old_pass_toast">请输入正确的旧密码</string>
    <string name="change_password_fragment_new_pass_toast">请输入大于4位字符的新密码</string>
    <string name="change_password_fragment_two_password_different">两次密码不相同</string>
    <string name="feed_back_help_and_feedback">帮助与反馈</string>
    <string name="feed_back_help_and_feedback_select">（必选）请选择你想反馈的问题</string>
    <string name="feed_back_question_details">请补充详细问题和意见</string>
    <string name="feed_back_lengh_limited_1">请输入不少于10个字的描述</string>
    <string name="feed_back_submit">提交</string>
    <string name="feed_back_is_required">反馈的问题为必选</string>
    <string name="feed_back_length_limited">长度限制10-300字</string>
    <string name="upload_options_1">在WIFI连接时提示上传</string>
    <string name="upload_options_2">图片上传质量</string>
    <string name="upload_options_3">高</string>
    <string name="upload_options_4">低</string>
    <string name="my_fragment_1">用户名</string>
    <string name="my_fragment_2">待上传</string>
    <string name="my_fragment_3">待开始</string>
    <string name="my_fragment_4">下载任务</string>
    <string name="my_fragment_5">未完成</string>
    <string name="my_fragment_6">消息中心</string>
    <string name="my_fragment_7">存储空间</string>
    <string name="my_fragment_8">清除缓存</string>
    <string name="my_fragment_9">修改密码</string>
    <string name="my_fragment_10">帮助与反馈</string>
    <string name="my_fragment_11">退出登录</string>
    <string name="my_fragment_12">数据上传设置</string>
    <string name="my_fragment_13">行动提报计划</string>
    <string name="input_send_comments">完成</string>
    <string name="fill_in_score">输入评分</string>
    <string name="fill_in_save">保存</string>
    <string name="success_dialog_checking">检核完成(%1$d/%2$d)</string>
    <string name="success_dialog_date">暂无数据</string>
    <string name="success_dialog_date_size">%1$d条数据,%2$d个附件未上传</string>
    <string name="success_dialog_end">终于%1$s</string>
    <string name="subject_list_tittle">题目列表</string>
    <string name="subject_list_select">选择</string>
    <string name="plan_viewpager_1_1">计划完成日期:</string>
    <string name="plan_viewpager_1_2">提报时间:</string>
    <string name="plan_viewpager_1_3">多次未完成</string>
    <string name="plan_viewpager_1_4">%1$s-%2$s</string>
    <string name="plan_tittle">行动计划提报</string>
    <string name="plan_submit_action_plan_presentation">发起提报</string>
    <string name="plan_viewpager_tittle_1">未完成</string>
    <string name="plan_viewpager_tittle_2">已完成</string>
    <string name="plan_viewpager_tittle_3">全部</string>
    <string name="plan_1_tittle">提报中</string>
    <string name="plan_1_1">提报日期:</string>
    <string name="plan_1_2">监督人:</string>
    <string name="plan_1_3">省份</string>
    <string name="plan_1_4">经销商名称</string>
    <string name="plan_1_5">所属检核模板</string>
    <string name="plan_1_6">一级指标</string>
    <string name="plan_1_7">二级指标</string>
    <string name="plan_1_8">改善前图片</string>
    <string name="plan_1_9">图片</string>
    <string name="plan_1_10">收回</string>
    <string name="plan_1_11">下一步</string>
    <string name="plan_1_12">report/%1$s/%2$s/before/</string>
    <string name="plan_1_13">改善后图片</string>
    <string name="plan_1_14">改善前状态</string>
    <string name="plan_1_15">改善后状态</string>
    <string name="plan_2_1">提报中</string>
    <string name="plan_2_2">原因诊断</string>
    <string name="plan_2_3">具体改善措施</string>
    <string name="plan_2_4">计划完成日期</string>
    <string name="plan_2_5">计划持续时间</string>
    <string name="plan_2_6">执行人</string>
    <string name="plan_2_7">是否完成</string>
    <string name="plan_2_8">提交</string>
    <string name="plan_2_9">·%1$s%2$s</string>
    <string-array name="select_plan">
        <item>是</item>
        <item>否 </item>
    </string-array>
    <string name="plan_2_10">未完成原因</string>
    <string name="plan_2_11">%1$d天</string>
    <string name="plan_2_12">report/%1$s/%2$s/after/</string>
    <string name="plan_2_13">原因诊断不能为空</string>
    <string name="plan_2_14">具体改善措施不能为空</string>
    <string name="plan_2_15">计划时间不能为空</string>
    <string name="upload_fragment_1">取消</string>
    <string name="upload_fragment_2">批量管理</string>
    <string name="phrases_31">请输入100字以内</string>
    <string name="phrases_32">请输入300字以内</string>
    <string name="phrases_33">拍照</string>
</resources>