<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.coahr.thoughtrui.widgets.TittleBar.MyTittleBar
        android:id="@+id/upload_options_tittle"
        app:tittle="上传设置"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.coahr.thoughtrui.widgets.TittleBar.MyTittleBar>
    <androidx.cardview.widget.CardView
       android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="@dimen/edge_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/upload_options_1"
                android:textSize="@dimen/dp_14"
                android:textColor="#333333"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/upload_options_2"
            android:textSize="@dimen/dp_14"
            android:textColor="#333333"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#999999"/>
        <RelativeLayout
            android:paddingLeft="@dimen/edge_margin"
            android:paddingRight="@dimen/edge_margin"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/upload_options_3"
                android:textSize="@dimen/dp_14"
                android:textColor="#333333"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:paddingLeft="@dimen/edge_margin"
            android:paddingRight="@dimen/edge_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/upload_options_4"
                android:textSize="@dimen/dp_14"
                android:textColor="#333333"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
